...
    modifier: Modifier = Modifier,
    imageLoader: ImageLoader? = null,
) {
    Column(
        modifier = modifier
            .clickable(role = Role.Button, onClick = onClick)
            .testTag("album-card"),
    ) {
        AlbumCover(
            cover = summary.cover,
            imageLoader = imageLoader,
            modifier = Modifier
                .fillMaxWidth()
...
